# sdp-workflow

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTORS  LICENCE  Makefile  README.md  code-coverage.xml  linting.xml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  unit-tests.xml
docs/src/: api.rst  conf.py  development.rst  example_scripts.rst  examples.rst  index.rst  introduction.rst  port_configuration.rst  sdp_workflow.rst  testing.rst  workflow_api.rst  workflow_dev.rst
docs/src/examples/: batch_example.rst  realtime_example.rst
docs/src/workflow_example/: batch_example.rst  real_time_example.rst
example/: workflow_sketch.py
src/ska_sdp_workflow/: __init__.py  buffer_request.py  dask_deploy.py  deploy_base.py  ee_base_deploy.py  fake_deploy.py  feature_toggle.py  helm_deploy.py  phase.py  release.py  test_deploy.py  test_realtime.py  version.py  workflow.py
tests/: conftest.py  t_workflow.py  test_workflow.py
tests/data/: configuration_string.json  receive_addresses.json  receive_addresses_count_larger.json  receive_addresses_multiple_ports.json  scan_types_count_larger.json  values.yaml
