[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
source = ska_sdp_workflow
omit = */__init__.py

[tool:pytest]
junit_family=legacy
addopts = -vv
          --pylint
          --cov=ska_sdp_workflow
          --cov-config=setup.cfg
          --cov-report=term
          --cov-report=xml:code-coverage.xml
          --cov-report=html
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --junitxml=unit-tests.xml

[report]
skip_covered = False
sort = Cover
